# ELISA

./: .env.example  .gitignore  README.md  alphaclip.py  alphaclip_similarities.ipynb  config.example.yaml  config.yaml  configuration.py  dataset.py  download_coco.py  inf_example.py  inference.py  inspect_adapter.py  preprocess.py  pyproject.toml  requirements.txt  sam.py  train.py  train_llava_lora.py  validation.py  viewer.py  visualize.py  webapp.py
llava_finetune/: functions.py  model.py  train_embs_mean.pt  utils.py
preprocessing/: alphaclip.py  dataset.py  sam.py
